--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	</classpathentry>
 	<classpathentry kind="src" path="2C"/>
 	<classpathentry excluding="triangleSqure/calander.java" kind="src" path="3C"/>
+	<classpathentry kind="src" path="4C"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
